# seasons-specials

./: .gitignore  README.md  cities.txt  get-cities.py  get-coords.py  get-food.py  get-states-from-addr.py  mk-state-dirs.py  states.txt
ak/alaska-birch-syrup-company-M12381/: address  winter
ak/alaskan-hen-house-M15428/: fall  spring  summer  winter
ak/anchorage-city-farms-M55662/: fall  spring  summer  winter
ak/anchorage-downtown-market-M643/: address  coords
ak/arctic-harvest-deliveries-M76972/: address  coords
ak/capriccio-specialties-M35636/: fall
ak/cottonwood-creek-farm-M52985/: fall  winter
ak/domer-family-farm-M9873/: fall  spring  summer
ak/eaglesong-family-peony-farm-M55953/: address  coords  spring
ak/salmonlily-farm-M65141/: address  coords
data/az/: mesa  phoenix  (+2 more)
db/: Cargo.toml
db/migrations/2020-11-08-090542_create_csa/: down.sql  up.sql
db/src/: lib.rs  models.rs  schema.rs
find-closest/: Cargo.toml
fish/: Cargo.toml
food-map/: Cargo.toml
lib/: Cargo.toml
products/: herbs  meats  sprouts
scripts/: csas-ak.txt  csas-ny.txt  csas.txt  get-cities.py  get-food.py  get-states.py  mega-download.py  mk-state-dirs.py  move.py  regexptest.py
seafood/: Alaska.csv  Alaska.txt  Atlantic.csv  Atlantic.txt  Great Lakes.txt  Great_Lakes.csv  Locations_To_States.json  Pacific.csv  Pacific.txt
seasons_lib/: Cargo.toml
server/: Cargo.toml  Rocket.toml
server/src/: db_interface.rs  main.rs  product.rs  routes.rs  test.rs
server/src/categories/: dairy-eggs  fruits  grains  nuts-seeds  processed
server/static/: index.html
(+1844 files in other folders)
