[package]
name = "db"
version = "0.1.0"
authors = ["Owen Xie <15828145+nfusionz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"] }

[dependencies.seasons_lib]
path = "../seasons_lib"