[package]
name = "server"
version = "0.1.0"
authors = ["Owen Xie <owenxie24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rand   = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve"]

[dependencies.lib]
path = "../lib"
