[package]
name = "server"
version = "0.1.0"
authors = ["Owen Xie <15828145+nfusionz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rand   = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "serve", "diesel_postgres_pool"]

[dependencies.seasons_lib]
path = "../seaons_lib"

[dependencies.db]
path = "../db"
